--- a/template/index.ejs
+++ b/template/index.ejs
@@ -7,8 +7,8 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="description" content="Library Watch" />
   <meta name="application-name" content="Library Watch" />
-  <meta name="summary" content="Library Watch is a RESTFul client. With it you can view information about libraries, repositories from GitHub, NPM api services." />
-  
+  <meta name="summary" content="Library Watch is a SPA RESTFul client. With it, you can view information about GitHub's repositories, NPM's packages." />
+  <meta name="url" content="https://zhnzhn.github.io/library-watch" />
   <title>Library Watch v0.10.0</title>
   <link rel="icon" href="/css/favicon.png" sizes="32x32" type="image/png" />
   <base target="_blank">
@@ -97,7 +97,7 @@
    left: 2em;
    font-family: "Roboto", "Arial", "Lato", sans-serif;
    font-size: 1em;
-   font-weight: bold;   
+   font-weight: bold;
 }
   </style>
 
