--- a/template/index.ejs
+++ b/template/index.ejs
@@ -7,7 +7,7 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="description" content="Library Watch" />
   <meta name="application-name" content="Library Watch" />
-  <meta name="summary" content="Library Watch is a SPA RESTFul client. With it, you can view information about GitHub's repositories, NPM's packages." />
+  <meta name="summary" content="Library Watch is a SPA RESTFul client. With it, you can view information about GitHub's repositories, NPM's packages, StackOverflows's questions." />
   <meta name="url" content="https://zhnzhn.github.io/library-watch" />
   <title>Library Watch v0.10.0</title>
   <link rel="icon" href="/css/favicon.png" sizes="32x32" type="image/png" />
