--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -2,7 +2,7 @@
 .with-scroll::-webkit-scrollbar {
 	/*background-color:black;*/
     width: 5px;
-    
+
 }
 
 .with-scroll::-webkit-scrollbar-track {
@@ -30,4 +30,23 @@
 	/*background-color:gray;*/
     border-radius: 2px;
     /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
+}
+
+.browser-watch{
+	overflow-y: auto;
+	height: 80%;
+	height: calc(100vh - 150px);
+	padding-right: 10px;
+}
+.browser-watch--1r{
+	overflow-y: auto;
+	height: 80%;
+	height: calc(100vh - 195px);
+	padding-right: 10px;
+}
+.browser-watch--2r{
+	overflow-y: auto;
+	height: 80%;
+	height: calc(100vh - 225px);
+	padding-right: 10px;
 }
