Add locale JSON File Backup/Load actions for Watch Items

--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -101,9 +101,9 @@
 }
   </style>
 
-  
+  <!-- inject:css -->
   <link rel="stylesheet" href="/css/app-2392031449.min.css">
-  
+  <!-- endinject  -->
 
 
 </head>
