--- a/template/index.ejs
+++ b/template/index.ejs
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="referrer" content="no-referrer" />
-  <meta name="description" content="Library Watch" />
+  <meta name="description" content="Library Watch. With it, you can view information about GitHub's repositories, NPM's packages, StackOverflows's questions." />
   <meta name="application-name" content="Library Watch" />
   <meta name="summary" content="Library Watch is a SPA RESTFul client. With it, you can view information about GitHub's repositories, NPM's packages, StackOverflows's questions." />
   <meta name="url" content="https://zhnzhn.github.io/library-watch" />
-  <title>Library Watch v0.10.0</title>
+  <title>Library Watch v0.11.0</title>
   <link rel="icon" href="/css/favicon.png" sizes="32x32" type="image/png" />
   <base target="_blank">
 
@@ -102,13 +102,14 @@
   </style>
 
   
-  <link rel="stylesheet" href="/css/app-2392031449.min.css">
+  <link rel="stylesheet" href="/css/app-6756818291.min.css">
   
 
 
 </head>
 <body>
 
+  <!--googleoff: snippet-->
   <noscript>
     <style type="text/css">
      #spinner {
@@ -128,6 +129,8 @@
     </div>
   </div>
 
+  <!--googleon: snippet-->
+
 
    <div id="app">
    </div>
@@ -139,6 +142,12 @@
         </div>
         <div class="noscript__msg">
           <p>It seems JavaScript in your browser disabled or not supported.</p>
+          <br/>
+          <p>
+           Library Watch is a SPA RESTFul client. With it, you can view information
+           about GitHub's repositories, NPM's packages, StackOverflows's questions.
+          </p>
+          <br/>
           <p>To use <a class="noscript__link" href=".">Library Watch</a>, please, enable and reload page.</p>
         </div>
       </div>
