--- a/template/index.ejs
+++ b/template/index.ejs
@@ -102,7 +102,7 @@
   </style>
 
   
-  <link rel="stylesheet" href="/css/app-6756818291.min.css">
+  <link rel="stylesheet" href="css/app-6756818291.min.css">
   
 
 
