--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -102,7 +102,7 @@
   </style>
 
   <!-- inject:css -->
-  <link rel="stylesheet" href="css/app-6756818291.min.css">
+  <link rel="stylesheet" href="/css/app-c7fac24aac.min.css">
   <!-- endinject  -->
 
 
@@ -153,6 +153,23 @@
       </div>
    </noscript>
 
+   <!-- Google Analytics -->
+   <script>
+    if ( window && window.location.href.indexOf("https://zhnzhn.github.io/library-watch") > -1){
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create' , 'UA-87123545-1', {
+            'cookieDomain' : 'zhnzhn.github.io/library-watch',
+            'cookieExpires' : 0
+      });
+      ga('set', 'anonymizeIp', true);
+      ga('send', 'pageview');
+    }
+  </script>
+  <!-- Google Analytics -->
 
 </body>
 </html>
