--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -102,7 +102,7 @@
   </style>
 
   <!-- inject:css -->
-  <link rel="stylesheet" href="/css/app-c7fac24aac.min.css">
+  <link rel="stylesheet" href="css/app-c7fac24aac.min.css">
   <!-- endinject  -->
 
 
