--- a/css/container.css
+++ b/css/container.css
@@ -42,6 +42,15 @@
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
 }
+.header__icon-app {
+  display: inline-block;
+  width : 32px;
+  height : 32px;
+  cursor: default;
+  position: absolute;
+  top: 7px;
+  left: 5px;
+}
 
 .row__topic__odd {
   line-height: 1.5;
