--- a/css/buttons.css
+++ b/css/buttons.css
@@ -127,8 +127,25 @@
   stroke : rgba(164, 135, 212, 1);
 }
 
+.bt__watch__caption {
+    display: inline-block;
+    color: rgb(128, 192, 64);
+    border: 2px solid rgb(128, 192, 64);
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+    text-align: center;
+    cursor: pointer;
+    margin-left: 20px;
+    line-height: initial;
+    position: relative;
+    top: -2px;
+}
+
 .bt__watch__bar{
   display: inline-block;
+  /*position: relative;
+  top: -2px;*/
   text-align: center;
   font-weight : bold;
   margin-left: 10px;
@@ -136,6 +153,7 @@
   border-radius : 20px;
   width : auto;
   height : auto;
+  /*line-height: initial;*/
   border : 2px solid gray;
   color : gray;
   cursor: pointer;
