--- a/css/container.css
+++ b/css/container.css
@@ -3,7 +3,7 @@
 .component-container {
   display: flex;
   flex-direction: row;
-  margin-top: 5px;
+  margin-top: 8px;
   margin-bottom: 10px;
 }
 
@@ -28,19 +28,16 @@
 }
 
 
-.header{
+.header {
   position : relative;
-  width: calc(100vw - 36px);
-  margin-left: 10px;
-  margin-right: 26px;
+  width: 100%;
   background-color: rgba(77, 77, 77, 1);
   min-height: 46px;
   max-height: 46px;
-  border : 3px solid #232F3B;
-  border-top: none;
   padding-top: 8px;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
+  padding-left: 12px;
+  box-shadow: rgba(0,0,0, 0.14) 0px 0px 4px, rgba(0,0,0, 0.6) 0px 4px 8px;
+  z-index: 50;
 }
 .header__icon-app {
   display: inline-block;
@@ -49,8 +46,34 @@
   cursor: default;
   position: absolute;
   top: 7px;
-  left: 5px;
+  left: 16px;
 }
+
+.row__library:nth-child(odd) {
+  line-height: 2;
+  background-color: #404040;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 16px;
+  cursor: pointer;
+}
+.row__library:nth-child(even) {
+  line-height: 2;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 16px;
+  cursor: pointer;
+}
+.row__library:hover{
+  border-bottom: 1px solid #1B75BB;
+}
+
 
 .row__topic__odd {
   line-height: 1.5;
@@ -76,7 +99,6 @@
 .row__topic__odd:hover, .row__topic__even:hover {
   border-bottom: 1px solid #1B75BB;
 }
-
 
 
 .row-odd {
