--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -2,12 +2,10 @@
 .with-scroll::-webkit-scrollbar {
 	/*background-color:black;*/
     width: 5px;
-
 }
 
 .with-scroll::-webkit-scrollbar-track {
     /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-
     background-color:black;
     width: 2px;
     border-radius: 2px;
@@ -20,16 +18,11 @@
 }
 
 .with-scroll::-webkit-scrollbar-thumb {
-	/*background-color:green;*/
 	width:3px;
 	height: 50px;
-	/*background-color: #333333;*/
-	background-color:#909090;
-	/*background-color:#BCBCBC;*/
-	/*background-color: #D8D8D8;*/
-	/*background-color:gray;*/
-    border-radius: 2px;
-    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
+	background-color: #8BC34A;
+  border-radius: 2px;
+  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
 }
 
 .browser-watch{
@@ -37,16 +30,19 @@
 	height: 80%;
 	height: calc(100vh - 150px);
 	padding-right: 10px;
+	padding-left: 10px;
 }
 .browser-watch--1r{
 	overflow-y: auto;
 	height: 80%;
 	height: calc(100vh - 195px);
 	padding-right: 10px;
+	padding-left: 10px;
 }
 .browser-watch--2r{
 	overflow-y: auto;
 	height: 80%;
 	height: calc(100vh - 225px);
 	padding-right: 10px;
+	padding-left: 10px;
 }
