--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -164,7 +164,7 @@
   </style>
   <!-- onload="preloader.done(2)" onerror="preloader.errCss()" -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="/css/app-570ee3c9a9.min.css">
+  <link rel="stylesheet" href="/css/app-2a54e3b7a6.min.css">
   <!-- endinject  -->
 
 </head>
@@ -216,7 +216,7 @@
           <p>It seems JavaScript in your browser disabled or not supported.</p>
           <br/>
           <p>
-           Library Watch is a SPA RESTFul client. With it, you can view information
+           Library Watch is a SPA RESTful client. With it, you can view information
            about GitHub's repositories, NPM's packages, StackOverflows's questions.
           </p>
           <br/>
@@ -235,7 +235,7 @@
         <script src="<%=fileName %>" onload="preloader.done(26)" onerror="preloader.errScript()"></script>
       <% }
    } %>
-   <script>if(preloader && preloader.isErrScript){preloader.stop();}</script>   
+   <script>if(preloader && preloader.isErrScript){preloader.stop();}</script>
 
 </body>
 </html>
