--- a/css/container.css
+++ b/css/container.css
@@ -49,18 +49,8 @@
   left: 16px;
 }
 
-.row__library:nth-child(odd) {
-  line-height: 2;
-  background-color: #404040;
-  color: black;
-  font-size: 16px;
-  font-weight: bold;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  padding-left: 16px;
-  cursor: pointer;
-}
-.row__library:nth-child(even) {
+
+.row__library {
   line-height: 2;
   color: black;
   font-size: 16px;
@@ -70,7 +60,11 @@
   padding-left: 16px;
   cursor: pointer;
 }
-.row__library:hover{
+.row__library:hover {
+  border-bottom: 1px solid #1B75BB;
+}
+.row__library:focus {
+  outline: 0;
   border-bottom: 1px solid #1B75BB;
 }
 
@@ -145,7 +139,20 @@
 
 .menu__badge {
   display: inline-block;
-  /*color: rgba(164, 135, 212, 1);*/
+  color: black;
+  /*background-color: #1b2836;*/
+  background-color: #232F3B;
+  float: right;
+  border-radius: 30%; }
+
+.menu__badge:hover {
+  color: #1b75bb;
+  color: #1B75BB;
+}
+/*
+.menu__badge {
+  display: inline-block;
+  color: rgba(164, 135, 212, 1);
   color: black;
   background-color: #232F3B;
   float: right;
@@ -156,7 +163,30 @@
 .menu__badge:hover{
   color: #1B75BB;
 }
+*/
 
+
+.svg-close {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  padding: 2px;
+  margin-right: 10px;
+  cursor: pointer;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  -ms-transition: -ms-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+  -webkit-transform-origin: center center;
+  -ms-transform-origin: center center;
+  transform-origin: center center;
+  will-change: transform; }
+
+.svg-close:hover {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg) scale(1.3, 1.3) translateY(-3px); }
+
+/*
 .svg-close{
   width: 22px;
   height: 22px;
@@ -167,11 +197,11 @@
   cursor: pointer;
 }
 .svg-close:hover{
-  /*border: 2px solid #ED5813;*/
   background-color: rgba(77,77,77,1);
   border-radius: 50%;
   color: green;
 }
+*/
 
 /*TabPane*/
 .tabpane__tabs::before{
