--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,56 +1,4 @@
 
-.button-type-a{
-  color: rgba(235,240,16,1);
-  background: linear-gradient(to top, #222222, gray);
-  border: 2px solid #696969;
-  border-radius: 4px;
-  padding: 4px 8px;
-  font-size: 16px;
-  margin-left: 2px;
-  margin-right: 2px;
-  cursor: pointer;
-}
-
-.button-type-a:hover, .button-type-a:active, .button-type-a:focus{
-  border: 2px solid green;
-  box-shadow: 2px 2px 2px 2px rgba(0,255,0, 0.3);
-  outline: none;
-}
-
-.button-type-b {
-  color: rgba(235,240,16,1);
-  background: linear-gradient(to top, #804000, gray);
-  border: 2px solid #696969;
-  padding: 2px 3px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.button-type-b:hover, .button-type-b:active, .button-type-b:focus {
-  border: 2px solid green;
-  outline: none;
-}
-
-.button-type-c {
-  color: rgba(235,240,16,1);
-  background: linear-gradient(to top, #804000, gray);
-  border: 2px solid #696969;
-  border-radius: 4px;
-  padding: 4px 8px;
-  font-size: 16px;
-  margin-left: 2px;
-  margin-right: 2px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: pointer;
-}
-
-.button-type-c:hover, .button-type-c:active, .button-type-c:focus {
-  border: 2px solid green;
-  outline: none;
-}
 
 .button-tab{
   position : absolute;
@@ -185,4 +133,58 @@
 button::-moz-focus-inner {
   border : 0;
   outline: 0;
+}
+
+.bt-flat {
+  color: #1b2836;
+  border: 10px;
+  box-sizing: border-box;
+  display: inline-block;
+  font-family: Roboto, sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  font-size: inherit;
+  font-weight: inherit;
+  position: relative;
+  z-index: 1;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 2px;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  background-color: rgba(0, 0, 0, 0);
+  text-align: center;
+}
+.bt-flat:hover {
+ outline: 0;
+}
+.bt-flat:focus {
+  background-color: rgba(120, 120, 120, 0.2);
+}
+
+.bt-flat__div {
+  background-color: rgba(0, 0, 0, 0);
+  top: 0;
+  height: 36px;
+  border-radius: 2px;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+.bt-flat__div:hover {
+  background-color: rgba(120, 120, 120, 0.2);
+}
+
+.bt-flat__span {
+  position: relative;
+  opacity: 1;
+  margin: 0;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  user-select: none;
 }
