--- a/css/reset.css
+++ b/css/reset.css
@@ -17,7 +17,7 @@ html {
 
 a {
   text-decoration: none;
-  color: black;  
+  color: black;
   outline: 0px none;
 }
 a:visited {
@@ -28,6 +28,7 @@ a:visited {
 button {
   appearance: none;
   border: none;
+  outline: 0;
   background-color: transparent;
   font-size: inherit;
   -webkit-appearance: none;
