--- a/css/container.css
+++ b/css/container.css
@@ -86,9 +86,10 @@
   padding-bottom: 8px;
   padding-left: 8px;
   padding-right: 8px;
-  border-bottom: medium solid transparent;
+  border-bottom: medium solid #4d4d4d;
   word-wrap: break-word;
   cursor: pointer;
+  transition: border-bottom-color 0.4s ease-in;
 }
 .row-even {
   line-height: 1.5;
@@ -99,12 +100,14 @@
   padding-bottom: 8px;
   padding-left: 8px;
   padding-right: 8px;
-  border-bottom: medium solid transparent;
+  border-bottom: medium solid #4d4d4d;
   word-wrap: break-word;
   cursor: pointer;
+  transition: border-bottom-color 0.4s ease-in;
 }
-.row-even:hover, .row-odd:hover{
-  border-bottom: medium solid #1B75BB;
+.row-even:hover,
+.row-odd:hover {
+  border-bottom-color: #1b75bb;
 }
 
 .item__quandl{
