--- a/css/container.css
+++ b/css/container.css
@@ -27,6 +27,32 @@
   outline: 0px none;
 }
 
+.cont-caption {
+  position: relative;
+  background-color: #232f3b;
+  color: silver;
+  line-height: 1.8;
+  padding-top: 4px;
+  padding-left: 4px;
+  padding-right: 42px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: clip;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.gap-right:before {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 38px;
+  height: 100%;
+  background: inherit;
+}
+
 .row__library {
   line-height: 2;
   color: black;
@@ -76,7 +102,7 @@
 }
 
 
-.row-odd {
+.row-item {
   line-height: 1.5;
   background-color: #404040;
   color: black;
@@ -91,22 +117,7 @@
   cursor: pointer;
   transition: border-bottom-color 0.4s ease-in;
 }
-.row-even {
-  line-height: 1.5;
-  color: black;
-  font-size: 16px;
-  font-weight: bold;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
-  border-bottom: medium solid #4d4d4d;
-  word-wrap: break-word;
-  cursor: pointer;
-  transition: border-bottom-color 0.4s ease-in;
-}
-.row-even:hover,
-.row-odd:hover {
+.row-item:hover {
   border-bottom-color: #1b75bb;
 }
 
