--- a/css/item.css
+++ b/css/item.css
@@ -5,7 +5,8 @@
   padding-top: 4px;
   padding-right: 42px;
   width: 100%;
-  height: 30px;
+  height: auto;
+  overflow-x: hidden;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
   box-shadow: rgba(0, 0, 0, 0.18) 0px 5px 11px 0px, rgba(0, 0, 0, 0.15) 0px 4px 15px 0px;
