--- a/css/zhn-select.css
+++ b/css/zhn-select.css
@@ -64,8 +64,7 @@
 
 .zhn-select__options__div {
   min-height: 160px;
-  max-height: 200px;
-  padding-bottom: 2px;
+  max-height: 200px;  
   overflow-y: auto;
   overflow-x: hidden;
 
@@ -81,6 +80,7 @@
   padding-top: 6px;
   padding-left: 5px;
   padding-bottom: 6px;
+  border-bottom: solid 2px transparent;
   cursor: pointer;
 }
 .zhn-select__row:nth-child(odd) {
@@ -88,12 +88,14 @@
 }
 
 .zhn-select__row:hover {
-  border-bottom: solid 2px #1b75bb;
-  font-weight: bolder;
+  font-weight: 600;
+}
+.zhn-select__row:focus {
+  outline: 0;
 }
 .zhn-select__row--active {
   border-bottom: solid 2px #1b75bb;
-  font-weight: bolder;
+  font-weight: 600;
 }
 
 .zhn-select__footer {
