--- a/css/item.css
+++ b/css/item.css
@@ -1,11 +1,11 @@
 
 .item-caption {
   background-color: #232f3b;
+  width: 100%;
+  height: 34px; 
   padding-left: 8px;
   padding-top: 4px;
   padding-right: 42px;
-  width: 100%;
-  height: auto;
   overflow-x: hidden;
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
