--- a/css/reset.css
+++ b/css/reset.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: "Roboto", "Arial", "Lato", sans-serif;
+    font-family: Roboto, Arial, Lato, sans-serif;
     font-weight: 300;
     background-color: gray;
 }
