--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -1,28 +1,32 @@
 
+.with-scroll {
+  /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #8bc34a #232f3b;
+  overscroll-behavior-y: contain;
+  -webkit-overflow-scrolling: touch;
+}
+
 .with-scroll::-webkit-scrollbar {
-	/*background-color:black;*/
-    width: 5px;
+  width: 5px;
 }
 
 .with-scroll::-webkit-scrollbar-track {
-    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);*/
-    background-color:black;
-    width: 2px;
-    border-radius: 2px;
+  background-color: black;
+  width: 2px;
+  border-radius: 2px;
 }
 
 .with-scroll::-webkit-scrollbar-track-piece{
-    width: 2px;
-    background-color: #232F3B;
-	/*background-color:#333333;*/
+  width: 2px;
+  background-color: #232f3b;
 }
 
 .with-scroll::-webkit-scrollbar-thumb {
-	width:3px;
+	width: 3px;
 	height: 50px;
-	background-color: #8BC34A;
+	background-color: #8bc34a;
   border-radius: 2px;
-  /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/
 }
 
 .browser-watch{
