--- a/css/zhn-bt.css
+++ b/css/zhn-bt.css
@@ -3,7 +3,7 @@
   color: #80c040;
   border: 2px solid #80c040;
   border-radius: 50%;
-  line-height: 24px;
+  line-height: 1.45;
   width: 26px;
   height: 26px;
   text-align: center;
@@ -20,14 +20,14 @@
   display: inline-block;
   width: 100%;
   height: 100%;
-  border-radius: inherit;  
+  border-radius: inherit;
   background-color: transparent;
-  transition: background-color 200ms ease-out; 
+  transition: background-color 200ms ease-out;
 }
 
 .zhn-bt-circle:hover > div,
 .zhn-bt-circle:focus > div {
-  background-color: rgba(0, 0, 0, 0.3);  
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 
