--- a/template/index.ejs
+++ b/template/index.ejs
@@ -133,8 +133,8 @@
 .wrapper {
   margin: 0 auto;
   margin-top: 3em;
-  background-color: rgb(77, 77, 77);
-  border: solid 2px #232F3B;
+  background-color: #4d4d4d;
+  border: solid 2px #232f3b;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 0px 6px;
   z-index: 100;
@@ -153,9 +153,9 @@
    font-weight: bold;
 }
 .wrapper__app {
-  color:#80c040;
-  display:block;
-  padding-bottom:0.5em;
+  color: #80c040;
+  display: block;
+  padding-bottom: 0.5em;
 }
 .wrapper__loaded {
   width: 0;
@@ -164,7 +164,7 @@
 }
 .wrapper__error {
   display: none;
-  color: #F44336;
+  color: #f44336;
   margin-top: 8px;
 }
 .wrapper__reload {
@@ -174,9 +174,9 @@
 }
 
   </style>
-  
-  <link rel="stylesheet" href="/css/app-14508d3297.min.css">
-  
+
+  <link rel="stylesheet" href="/css/app-0bb10a7f3e.min.css">
+
 
 </head>
 <body>
