--- a/css/container.css
+++ b/css/container.css
@@ -24,7 +24,7 @@
   overflow-y: auto;
   opacity: 1;
   background: rgba(0,0,0, 0.35) none repeat scroll 0% 0%;
-  outline: 0px none;
+  outline: 0 none;
 }
 
 .cont-caption {
@@ -57,7 +57,7 @@
   line-height: 2;
   color: black;
   font-size: 16px;
-  font-weight: bold; 
+  font-weight: bold;
   padding-left: 12px;
   border-left: 4px solid transparent;
   cursor: pointer;
