--- a/css/input.css
+++ b/css/input.css
@@ -33,7 +33,7 @@
 .m-field__bt-clear {
   position: absolute;
   display: inline-block;
-  right: 0px;
+  right: 0;
   top: 1px;
   height: 30px;
   width: 30px;
