--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -136,7 +136,7 @@
   background-color: #4d4d4d;
   border: solid 2px #232f3b;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 0px 6px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 6px;
   z-index: 100;
   width: 14em;
   padding-top: 1em;
@@ -175,7 +175,7 @@
 
   </style>
   <!-- inject:css -->
-  <link rel="stylesheet" href="/css/app-0bb10a7f3e.min.css">
+  <link rel="stylesheet" href="/css/app-b0ea2695c3.min.css">
   <!-- endinject  -->
 
 </head>
