--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -107,21 +107,13 @@
   {
     width: 2.5em;
     height: 2.5em;
-   -webkit-animation: circle infinite 1.25s linear;
-      -moz-animation: circle infinite 0.75s linear;
-        -o-animation: circle infinite 1.25s linear;
-           animation: circle infinite 1.25s linear;
-   border: 3px solid rgba(164, 135, 212, 1);
+    -o-animation: circle infinite 1.25s linear;
+    animation: circle infinite 1.25s linear;
+   border: 3px solid #009ae5;
    border-top-color: transparent;
    border-radius: 100%;
  }
-@-webkit-keyframes circle
-{ 100% {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-} }
-@-moz-keyframes circle
-{ 100% { transform: rotate(360deg);}}
+
 @-o-keyframes circle
 { 100% {
   -o-transform: rotate(360deg);
@@ -175,7 +167,7 @@
 
   </style>
   <!-- inject:css -->
-  <link rel="stylesheet" href="/css/app-91b3b4b997.min.css">
+  <link rel="stylesheet" href="/css/app-30e7c2180d.min.css">
   <!-- endinject  -->
 
 </head>
