--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -107,13 +107,18 @@
   {
     width: 2.5em;
     height: 2.5em;
+    -webkit-animation: circle infinite 1.25s linear;
     -o-animation: circle infinite 1.25s linear;
     animation: circle infinite 1.25s linear;
    border: 3px solid #009ae5;
    border-top-color: transparent;
    border-radius: 100%;
  }
-
+@-webkit-keyframes circle
+{ 100% {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+} }
 @-o-keyframes circle
 { 100% {
   -o-transform: rotate(360deg);
