--- a/css/buttons.css
+++ b/css/buttons.css
@@ -138,51 +138,24 @@ button::-moz-focus-inner {
 
 .bt-flat {
   color: #1b2836;
-  border: 10px;
-  box-sizing: border-box;
   display: inline-block;
-  font-family: Roboto, sans-serif;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  cursor: pointer;
   text-decoration: none;
-  margin: 0;
-  padding: 0;
   outline: none;
-  font-size: inherit;
   font-weight: inherit;
-  position: relative;
-  z-index: 1;
   height: 36px;
   line-height: 36px;
-  border-radius: 2px;
-  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-  background-color: rgba(0, 0, 0, 0);
   text-align: center;
-}
-.bt-flat:hover {
- outline: 0;
-}
-.bt-flat:focus {
-  background-color: rgba(120, 120, 120, 0.2);
-}
-
-.bt-flat__div {
   background-color: rgba(0, 0, 0, 0);
-  top: 0;
-  height: 36px;
-  border-radius: 2px;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
-.bt-flat__div:hover {
+.bt-flat:hover,
+.bt-flat:focus {
+  outline: 0;
   background-color: rgba(120, 120, 120, 0.2);
 }
 
-.bt-flat__span {
-  position: relative;
-  opacity: 1;
-  margin: 0;
-  padding-left: 8px;
-  padding-right: 8px;
+.bt-flat__caption {
+  padding: 0 8px;
   font-size: 16px;
   font-weight: bold;
   letter-spacing: 0;
