--- a/css/reset.css
+++ b/css/reset.css
@@ -34,9 +34,13 @@ button {
   font-size: inherit;
   -webkit-appearance: none;
   -moz-appearance: none;
+  cursor: pointer;
 }
-/*
-button:focus {
+button:focus,
+button:hover {
   outline: 0;
 }
-*/
+button::-moz-focus-inner {
+  border: 0;
+  outline: 0;
+}
