Edit gulp's css minification task

--- a/template/gulp.ejs
+++ b/template/gulp.ejs
@@ -171,9 +171,7 @@
 }
 
   </style>
-  <!-- inject:css -->
-  <link rel="stylesheet" href="/css/app-ab1c46df29.min.css">
-  <!-- endinject  -->
+  <!-- REPLACE_BY_CSS_MIN_LINK -->  
 
 </head>
 <body>
