Add dev dependencies clean-css

--- a/template/index.ejs
+++ b/template/index.ejs
@@ -24,13 +24,7 @@
     }</script>
   <link rel="icon" href="/css/favicon.png" sizes="32x32" type="image/png">
   <base target="_blank">
-
-  <!--[if IE]>
-      <script src="lib/es6-shim.min.js"></script>
-      <script src="lib/es6-promise.min.js"></script>
-      <script src="lib/fetch.min.js"></script>
-  <![endif]-->
-
+  
   <script>
     ;(function(){
       var polyfill = {
@@ -171,9 +165,7 @@
 }
 
   </style>
-  
-  <link rel="stylesheet" href="/css/app-ab1c46df29.min.css">
-  
+  <link rel="stylesheet" href="css/app-c9211752a1.min.css">  
 
 </head>
 <body>
