Edit index noscript tag

--- a/css/noscript.css
+++ b/css/noscript.css
@@ -1,46 +1,42 @@
 .noscript__root{
-   background-color: #4D4D4D;
-   margin-top: 30px;
-   width: 570px;
-   margin-left: auto;
-   margin-right: auto;
-   height: 220px;
-   border: 2px solid #232F3B;
-   border-radius: 10px;
-   padding: 10px;
+  background-color: #4d4d4d;
+  width: min(80%, 570px);
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;  
+  border-radius: 5px;
 }
 
 .noscript__header{
- background-color: #232F3B;
- height: 28px;
- border-bottom-left-radius: 10px;
- border-bottom-right-radius: 10px;
- padding-top: 4px;
- padding-left: 10px;
- padding-right: 10px;
- margin-bottom: 10px;
+  background-color: #232f3b;
+  height: 32px;
+  padding: 8px 10px 0 10px; 
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .noscript__caption{
- color: #80c040;
- font-size: 16px;
- font-weight: bold;
+  color: #80c040;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .noscript__msg{
- background-color: #FFC100;
- padding-left: 10px;
- padding-right: 10px;
- padding-top: 5px;
- padding-bottom: 10px;
- border-top-left-radius: 10px;
- border-top-right-radius: 10px;
- color: black;
- font-weight: bold;
+  color: black;
+  background-color: #ffc100;
+  padding: 10px; 
+  line-height: 1.25;
+  font-weight: bold;
 }
 
 .noscript__link{
- text-decoration: none;
- color: black;
- border-bottom: 1px solid #1B75BB;
+  text-decoration: none;
+  color: black;
+  border-bottom: 1px solid #1b75bb;
+}
+.noscript__link:hover{
+  border-bottom: 3px solid #1b75bb;
+}
+.noscript__link:visited {
+  color: #1b75bb;
 }
