--- a/template/a-index.ejs
+++ b/template/a-index.ejs
@@ -170,14 +170,7 @@
 </head>
 <body>
 
-  <!--googleoff: snippet-->
-  <noscript>
-    <style type="text/css">
-     #spinner {
-       display: none;
-     }
-    </style>
-  </noscript>
+  <!--googleoff: snippet-->  
   <div id="preloader" class="wrapper">
       <div id="circle" data-loader="circle" class="wrapper__loading"></div>
       <div class="wrapper__descr">
@@ -209,19 +202,24 @@
 
    <!--googleoff: snippet--> 
    <noscript>
+      <style>
+       #preloader {
+         display: none;
+       }
+      </style>
       <div class="noscript__root">
         <div class="noscript__header">
-           <h1 class="noscript__caption">Library Watch</h1>
+           <h1 class="noscript__caption">Web app Library Watch</h1>
         </div>
         <div class="noscript__msg">
           <p>It seems JavaScript in your browser disabled or not supported.</p>
           <br/>
           <p>
-           Library Watch is a SPA RESTful client. With it, you can view information
+           Web app Library Watch is a SPA RESTful client. With the help of the app you can explore information
            about GitHub's repositories, NPM's packages, StackOverflows's questions.
           </p>
           <br/>
-          <p>To use <a class="noscript__link" href=".">Library Watch</a>, please, enable and reload page.</p>
+          <p>To use <a class="noscript__link" href=".">Library Watch</a>, please, enable JavaScript and reload page.</p>
         </div>
       </div>
    </noscript>
