--- a/template/a-index.ejs
+++ b/template/a-index.ejs
@@ -16,6 +16,7 @@ https://api.npms.io
 https://api.stackexchange.com
 https://gs.statcounter.com
 https://bundlephobia.com;
+object-src 'none';
 form-action 'none'; 
 require-trusted-types-for 'script';"
   >
