--- a/template/index.ejs
+++ b/template/index.ejs
@@ -16,6 +16,7 @@ https://api.npms.io
 https://api.stackexchange.com
 https://gs.statcounter.com
 https://bundlephobia.com;
+object-src 'none';
 form-action 'none'; 
 require-trusted-types-for 'script';"
   >
@@ -89,7 +90,7 @@ require-trusted-types-for 'script';"
        return obj;
     })(4);
   </script>  
-
+  
   <style>
   [data-loader='circle']
   {
@@ -162,7 +163,7 @@ require-trusted-types-for 'script';"
 }
 
   </style>
-  <link rel="stylesheet" href="css/app-c9452f6b99.min.css">  
+  <link rel="stylesheet" href="css/app-91563c3375.min.css">  
 
 </head>
 <body>
@@ -203,7 +204,7 @@ require-trusted-types-for 'script';"
        #preloader {
          display: none;
        }
-      </style> 
+      </style>
       <div class="noscript__root">
         <div class="noscript__header">
            <h1 class="noscript__caption">Web app Library Watch</h1>
