--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,34 +1,5 @@
 
-
-.button-tab {
-  position : absolute;
-  z-index : 10;
-  top : 0;
-  left : 300px;
-  color : gray;
-  line-height: 1.3;
-  background-color : #232F3B;
-  padding-left : 8px;
-  padding-right : 8px;
-  padding-top : 3px;
-  padding-bottom : 3px;
-  border-bottom-left-radius : 8px;
-  border-bottom-right-radius : 8px;
-  cursor : pointer;
-}
-.button-tab:hover{
-  color : rgba(164, 135, 212, 1);
-  font-weight: bold;
-}
-.button-tab--show{
-  color : rgba(164, 135, 212, 1);
-}
-.button-tab--show:hover{
-  color : gray;
-  font-weight: bold;
-}
-
-.arrow-down{
+.arrow-down {
   display: inline-block;
   position: relative;
   top: 3px;
@@ -45,22 +16,6 @@
   /* clean-css ignore:end */
 }
 
-.button-circle {
-    display : inline-block;
-    position : relative;
-    top : 4px;
-    border-radius: 50%;
-    border : 2px solid gray;
-    width : 24px;
-    height : 24px;
-    padding : 0;
-    stroke : gray;
-    cursor: pointer;
-}
-.button-circle:hover{
-  border : 2px solid rgba(164, 135, 212, 1);
-  stroke : rgba(164, 135, 212, 1);
-}
 
 .svg-resize {
   display: inline-block;
@@ -79,40 +34,37 @@
 }
 
 .bt__watch__caption {
-    display: inline-block;
-    color: rgb(128, 192, 64);
-    border: 2px solid rgb(128, 192, 64);
-    border-radius: 50%;
-    width: 22px;
-    height: 22px;
-    text-align: center;
-    cursor: pointer;
-    margin-left: 20px;
-    line-height: initial;
-    position: relative;
-    top: -2px;
+  display: inline-block;
+  color: rgb(128, 192, 64);
+  border: 2px solid rgb(128, 192, 64);
+  border-radius: 50%;
+  width: 26px;
+  height: 26px;
+  margin-left: 16px;
+  text-align: center;
+  position: relative;
+  top: -2px;
 }
 .bt__watch__caption:focus,
 .bt__watch__caption:hover {
   background-color: rgba(0, 0, 0, 0.3)
 }
 
-.bt__watch__bar{
+.bt__watch__bar {
   display: inline-block;
-  text-align: center;
-  font-weight : bold;
+  color: grey;
+  width: auto;
+  height: auto;
   margin-left: 10px;
-  padding : 6px 12px;
+  padding: 6px 12px;
+  text-align: center;
+  font-weight: bold;
   border-radius : 20px;
-  width : auto;
-  height : auto;
-  border : 2px solid gray;
-  color : gray;
-  cursor: pointer;
+  border: 2px solid gray;
   transition: color, border-color 200ms ease-out;
 }
 .bt__watch__bar:hover {
-  color : #80c040;
+  color: #80c040;
   border-color: #80c040;
 }
 
@@ -133,16 +85,10 @@
   border-radius: 100%;
 }
 
-button::-moz-focus-inner {
-  border : 0;
-  outline: 0;
-}
-
 .bt-flat {
   color: #1b2836;
   display: inline-block;
   text-decoration: none;
-  outline: none;
   font-weight: inherit;
   height: 36px;
   line-height: 36px;
@@ -152,7 +98,6 @@ button::-moz-focus-inner {
 }
 .bt-flat:hover,
 .bt-flat:focus {
-  outline: 0;
   background-color: rgba(120, 120, 120, 0.2);
 }
 
@@ -171,11 +116,9 @@ button::-moz-focus-inner {
   border-radius: 2px;
   fill: silver;
   stroke: silver;
-  cursor: pointer;
 }
 .bt-more:hover,
 .bt-more:focus {
-  outline: 0;
   background: rgba(164, 164, 164, 0.3);
 }
 
@@ -184,12 +127,7 @@ button::-moz-focus-inner {
   padding-bottom: 3px;
   padding-right: 4px;
   border-radius: 2px;
-  cursor: pointer;
-}
-.bt-item:hover {
-  outline: 0;
 }
 .bt-item:focus {
-  outline: 0;
   background: rgba(164, 164, 164, 0.3);
 }
