--- a/css/container.css
+++ b/css/container.css
@@ -88,7 +88,12 @@
   cursor: pointer;
 }
 .row__topic:hover {
-  border-bottom: 1px solid #1B75BB;
+  border-bottom: 1px solid #1b75bb;
+}
+.row__topic:active,
+.row__topic:focus {
+  outline: 0;
+  background-color: rgba(0, 0, 0, 0.15);
 }
 
 
